# auditor

./: .conf.logging-sample.yaml  .dockerignore  .env.sample  .flake8  .gitignore  .gitmodules  .travis.yml  Cargo.toml  Dockerfile  Makefile  README.md  create-student-db.py  discover-area-files-batch.py  discover-area-files.py  discover-buckets.py  discover-course-references.py  docker-healthcheck.sh  docker-install-packages.sh  dp-batch.py  dp-common.py  dp-erik.py  dp-index.py  dp-major-report.sh  dp-major-summary-required.sh  dp-major-summary.sh  dp-print.py  dp-reports.sh  dp-sentry.py  dp-sqlite.py  dp-validate.py  dp-worker.py  dp.py  load_clause.py  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements-excel.in  requirements-excel.txt  (+14 more)
app/: .gitignore  .prettierignore  package.json  tsconfig.json
auditor/: Cargo.toml
auditor-cli/: Cargo.toml
benchmarks/: bench_disjoints.py  bench_lazy_product.py  bench_make_claim.py
degreepath/: __init__.py  __main__.py  apply_clause.py  area.py  audit.py  claim.py  clause.py  constants.py  context.py  data.py  degreepath.py  discover_potentials.py  esth.py  exception.py  frozendict.py  group_by.py  lib.py  limit.py  load_clause.py  load_rule.py  main.py  ms.py  ncr.py  operator.py  requirement.py  result.py  rule.py  save.py  solution.py  solve.py  state.py  status.py  stringify.py  stringify_csv.py  types.py
dp/: __init__.py  __main__.py  apply_clause.py  area.py  assertion_clause.py  audit.py  claim.py  clause.py  clause_helpers.py  conditional_expression.py  constants.py  context.py  context_claims.py  context_exceptions.py  data_type.py  discover_potentials.py  exception.py  from_dict.py  grades.py  lazy_product.py  lib.py  limit.py  load_clause.py  load_course.py  load_rule.py  load_transcript.py  ms.py  ncr.py  op.py  operator.py  predicate_clause.py  run.py  solve.py  status.py  stringify.py  stringify_clause.py  stringify_csv.py  stringify_v3.py
examples/: auditor.rs  parser.rs  printer.rs  snapshot.rs
formatter/: Cargo.toml
formatter/src/: area_of_study.rs  assertion.rs  audit.rs  claim.rs  database.rs  filter_predicate.rs  lib.rs  limit.rs  operator.rs  path.rs  predicate_expression.rs  serde.rs  student.rs  to_cell.rs  to_csv.rs  to_html.rs  to_prose.rs  to_record.rs
formatter/src/rule/: conditional.rs  count.rs  course.rs  mod.rs  proficiency.rs  query.rs  requirement.rs
ideas/: sample-simple-area.yaml  sample-simple-student.json
parser/: Cargo.toml
parser-cli/: Cargo.toml
printer/: Cargo.toml
printer-cli/: Cargo.toml
reports/: Cargo.toml
reports/src/: database.rs  lib.rs  major_report.rs  major_summary.rs  structs.rs  students.rs
schema/: schema.json
src/: area_of_study.rs  dp-db-print.rs  dp-major-report.rs  dp-major-summary-required.rs  dp-major-summary.rs  dp-print.rs  dp-report.rs  filter.rs  lib.rs  limit.rs  main.rs  number_or_struct.rs  requirement.rs  save.rs  util.rs
tests/: course_from_str.py  snapshot.sh  test_ab.py  test_apply_clause.py  test_apply_operator.py  test_assertions.py  test_clauses.py  test_csci.py  test_degreepath.py  test_exceptions.py  test_exclude_req_from_gpa.py  test_from.py  test_global_limits.py  test_grade_ordering.py  test_independency.py  test_lazy_product.py  test_limit.py  test_load_clause.py  test_multicountable.py  test_predicates.py  (+8 more)
(+545 files in other folders)
