[package]
name = "degreepath"
version = "0.1.0"
authors = ["Hawken Rives <rives@stolaf.edu>"]
edition = "2018"

[workspace]

[[bin]]
name = "dp-report"
path = "src/dp-report.rs"

[[bin]]
name = "dp-print"
path = "src/dp-print.rs"

[dependencies]
clap = "3.0.0-beta.2"
csv = "1.1"
dp-formatter = { path = "formatter" }
rusqlite = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
