[package]
name = "degreepath"
version = "0.1.0"
authors = ["Hawken Rives <rives@stolaf.edu>"]
edition = "2018"

[workspace]

[[bin]]
name = "dp-report"
path = "src/dp-report.rs"

[[bin]]
name = "dp-major-report"
path = "src/dp-major-report.rs"

[[bin]]
name = "dp-print"
path = "src/dp-print.rs"

[[bin]]
name = "dp-db-print"
path = "src/dp-db-print.rs"

[dependencies]
clap = "3.0.0-beta.2"
csv = "1.1"
dp-formatter = { path = "formatter" }
rusqlite = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_path_to_error = "0.1.3"
askama_escape = "0.10.1"
