[package]
name = "degreepath"
version = "0.1.0"
authors = ["Hawken Rives <rives@stolaf.edu>"]
edition = "2018"

[workspace]

[[bin]]
name = "dp-report"
path = "src/dp-report.rs"

[dependencies]
anyhow = "1.0"
clap = "3.0.0-beta.2"
dp-formatter = { path = "./formatter" }
dp-reports = { path = "./reports" }
