[tool.poetry]
name = "degreepath"
version = "0.1.0"
description = ""
authors = ["Hawken Rives <rives@stolaf.edu>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
pyyaml = "^5.1"
pendulum = "^2.0"
coloredlogs = "^10.0"

[tool.poetry.dev-dependencies]
black = "^19.3b0"
mypy = "^0.670.0"
pytest = "^4.4"
tox = "^3.8"
jsonpickle = "^1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
