[package]
name = "dp-formatter"
version = "0.1.0"
authors = ["Hawken Rives <rives@stolaf.edu>"]
edition = "2018"

[lib]
name = "formatter"
path = "src/lib.rs"

[dependencies]
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
postgres = { version = "0.19", features = ["with-serde_json-1"] }
postgres-openssl = "0.5.0"
openssl = { version = "0.10", features = ["vendored"] }
dotenv = "0.15"
anyhow = "1.0"
