[package]
name = "dp-reports"
version = "0.1.0"
authors = ["Hawken Rives <rives@stolaf.edu>"]
edition = "2018"

[lib]
name = "reports"
path = "src/lib.rs"

[dependencies]
dp-formatter = { path = "../formatter" }
postgres = { version = "0.19", features = ["with-serde_json-1"] }
postgres-openssl = "0.5.0"
openssl = { version = "0.10", features = ["vendored"] }
dotenv = "0.15"
anyhow = "1.0"
indexmap = "1.6"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_path_to_error = "0.1"
askama_escape = "0.10"
itertools = "0.10"
